# zetris

./: .gitignore  CMakeLists.txt  TAGS  UIElement.cpp  UIElement.hpp  engine.cpp  engine.hpp  grid.cpp  grid.hpp  main.cpp  pch.h
zetrisng/: CMakeLists.txt  TAGS  engine.cpp  engine.hpp  globals.h  main.cpp  menu.cpp  menu.hpp  pch.h  uielement.cpp  uielement.hpp
zetrisng/Debug/: zetris.ilk
